[gd_scene load_steps=7 format=3 uid="uid://cjw8d5v3hm7pk"]

[ext_resource type="Script" uid="uid://dc8nvsdjigakv" path="res://commons/infoboards_3d/boards/Point/PointInfoBoard.gd" id="1_script"]
[ext_resource type="FontFile" uid="uid://bus4k2vontseu" path="res://commons/font/Roboto-VariableFont_wdth,wght.ttf" id="2_font"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_icrll"]
bg_color = Color(0.07, 0.07, 0.09, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.8, 0.8, 0.9, 0.6)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
shadow_color = Color(0, 0, 0, 0.3)
shadow_size = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button_hover"]
bg_color = Color(0.15, 0.15, 0.18, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.8, 0.8, 0.9, 0.7)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button_normal"]
bg_color = Color(0.1, 0.1, 0.12, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.6, 0.6, 0.7, 0.5)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.05, 0.05, 0.07, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.7, 0.7, 0.8, 0.5)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[node name="PointInfoBoard" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.05, 0.07, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="LeftPanel" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.4
theme_override_constants/separation = 15

[node name="Title" type="Label" parent="MarginContainer/HBoxContainer/LeftPanel"]
layout_mode = 2
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.9, 0.9, 1, 1)
theme_override_colors/font_outline_color = Color(0.2, 0.2, 0.3, 0.5)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 20
text = "THE POINT"
vertical_alignment = 1
autowrap_mode = 3

[node name="Separator" type="ColorRect" parent="MarginContainer/HBoxContainer/LeftPanel"]
custom_minimum_size = Vector2(0, 1)
layout_mode = 2
color = Color(0.6, 0.6, 0.7, 0.3)

[node name="TextScrollContainer" type="ScrollContainer" parent="MarginContainer/HBoxContainer/LeftPanel"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="CodeContainer" type="PanelContainer" parent="MarginContainer/HBoxContainer/LeftPanel/TextScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
theme_override_styles/panel = SubResource("StyleBoxFlat_icrll")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/LeftPanel/TextScrollContainer/CodeContainer"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/LeftPanel/TextScrollContainer/CodeContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Separator2" type="ColorRect" parent="MarginContainer/HBoxContainer/LeftPanel"]
custom_minimum_size = Vector2(0, 1)
layout_mode = 2
color = Color(0.6, 0.6, 0.7, 0.3)

[node name="NavigationButtons" type="HBoxContainer" parent="MarginContainer/HBoxContainer/LeftPanel"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/separation = 20

[node name="PrevButton" type="Button" parent="MarginContainer/HBoxContainer/LeftPanel/NavigationButtons"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(0.85, 0.85, 0.95, 1)
theme_override_styles/hover = SubResource("StyleBoxFlat_button_hover")
theme_override_styles/normal = SubResource("StyleBoxFlat_button_normal")
text = "< PREVIOUS"

[node name="NextButton" type="Button" parent="MarginContainer/HBoxContainer/LeftPanel/NavigationButtons"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(0.85, 0.85, 0.95, 1)
theme_override_styles/hover = SubResource("StyleBoxFlat_button_hover")
theme_override_styles/normal = SubResource("StyleBoxFlat_button_normal")
text = "NEXT >"

[node name="VisualizationContainer" type="PanelContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.6
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/VisualizationContainer"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VisualizationContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10
